style.css
* {
  box-sizing: border-box;	
}

html {
  font-size: 10px;
  font-family: verdana, sans-serif; /*font tbd*/
}

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  background-color: #C5C5C5; /*color tbd*/
  width: 100%;
  padding: 10px;
}

#intro {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.opening-statement {
	width: 100%;
	background-color: red; /*background color tbd*/
	padding-left: 10px;
}

.intro-container{
	/*width: 200px;*/
	background-color: green; /*color tbd*/
	padding: 10px;
}

#profile-pic{
	display: block;
	width: 100%;
	max-width: 250px;
	margin-left: auto;
	margin-right: auto;
	height: auto;
}

.link-container {
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	margin-top: 10px;
	margin-left: auto;
	margin-right: auto;
	border: solid 2px purple; /*added to help visulise image border*/
}

#about-me{
	
}

#portfolio {
	
}

#contact {
	
}

@media screen and (min-width:600px) {
  #intro {
    flex-direction: row;		
  }
  
  .intro-container {
	  position: sticky;
	  top: 0;
	  right: 0;
  }
  
  /*#profile-pic {
    position: fixed;
	top: 0;
	right: 0;
  }

  .link-container {
    position: fixed;
  	top: 0;
  	right: 0;
  }*/
  }
}

